--- a/style.css
+++ b/style.css
@@ -3,12 +3,10 @@
 
 
 
-
 :root{
     --logocolor: #5C00F0; 
     --letrascolor: #ffffff;
     --backgroundcolor: #06010E;
-
 }
 
 
@@ -21,7 +19,6 @@
     text-decoration: none;
     list-style-type: none;
 }
-
 
 
 header{
@@ -37,7 +34,10 @@ header{
     z-index: 2;
 }
 
-
+html{
+    width:100%;
+    z-index: 1;
+}
 
 .logo{
     height: 90%;
@@ -77,16 +77,18 @@ header{
 
 .main-bg{
     background-color: #1C083D;
+    
+
 }
 
 
 
 #hero {
     padding: 120px 0px;
-   max-width: 1200px;
    display: flex;
    justify-content: center;
    align-items: center;
+   
 }
 
 
@@ -95,7 +97,8 @@ header{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 50%;
+    width: 60%;
+    padding-left: 75px;
 }
 
 
@@ -132,7 +135,7 @@ header{
 
 .buttom-contactame{
     color: #ffffff;
-    background-color: blueviolet;
+    background-color: #8a2be2;
     width: 120px;
     padding: 8px 8px;
     border-radius: 150px;
@@ -159,10 +162,13 @@ header{
 
 }
 
-
+.img-container{
+    
+    
+}
 
 .hero-img{
- width: 35%;
+    width: 90%;
 }
 
 
@@ -204,17 +210,203 @@ header{
     letter-spacing: 0.5px;
 }
 
+/* Ventajas */
+
+.ventajas{
+    
+}
+
+.ventajas h2{
+    padding-top: 7rem;
+    font-size: 30px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+}
+
+
+.ventajas p{
+    font-size: 17px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 7rem;
+}
 
 
 
 
 
+.card-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 10rem;
+
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 20rem;
+    border: 5px solid #ff00c8 ;
+    border-radius: 3rem;
+    gap: 0.9rem;
+}
+
+
+.card img{
+    padding-top: 2rem;
+}
+
+
+.card h3{
+    color: #ffffff;
+    font-size: 25px;
+}
+
+
+.card p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-size: 17px;
+    font-weight: 600;
+    width: 70%;
+    padding-bottom: 2rem;
+}
+
+
+
+/* FORMULARIOS */
+
+.contacto{
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+    padding-left: 7rem ;
+    
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario h2{
+    text-align: center;
+    font-size: 29px;
+    margin-bottom: 7%;
+    color: white;
+}
 
 
 
 
+.formulario label{
+    font-size: 20px;
+    color: white;
+}
+
+.formulario input{
+    border: #ff00c8 3px solid;
+    border-radius: 0.5rem;
+    width: 20rem;
+    padding: 0.5% 1%;
+}
 
 
+.formulario textarea{
+    border: #ff00c8 3px solid;
+    border-radius: 0.5rem;
+    width: 20rem;
+    padding: 0.5% 1%;
+}
 
 
+.form-container{
+    display: flex;
+}
 
+
+.home-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.home-container h3{
+    padding-top: 5rem;
+    padding-bottom: 5rem ;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+}
+
+.home{
+    width: 90%;
+}
+
+.submit{
+    color: #ffffff;
+    background-color: #8a2be2;
+    width: 120px;
+    padding: 8px 8px;
+    border-radius: 150px;
+    font-size: 14px;
+    text-align: center;
+}
+
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(to bottom,#1C083D 20%,#06010E );
+    color: white;
+    padding-top: 2%;
+}
+
+.logos{
+    gap: 2rem;
+}
+
+.footer-logo {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-logo img{
+    width: 5rem;
+    padding-bottom: 2rem;
+}
+
+.footer-h4{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2rem;
+}
+
+.footer-end{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.logo-footer{
+    width: 3rem;
+}
+
+.footer-mail{
+}
+
+.linea {
+    border-top: 1px solid #ff00c8;
+    height: 2px;
+    padding: 0;
+    margin: 3rem auto 3rem auto;
+  }
